@@ -1,5 +1,9 @@
 Revision history for Perl distribution PathTools.
 
+ - If strlcpy() and strlcat() aren't available on the user's system,
+   we now use ppport.h to provide them, so our C code works. [Steve
+   Peters]
+
  - Upgraded to a newer version of ppport.h [Steve Peters]
 
 3.26 - Sun Jan 13 21:59:20 2008
